[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/zylann.translation_editor/tools/extractor_dialog.gd" type="Script" id=1]

[node name="ExtractorDialog" type="WindowDialog"]
visible = true
margin_left = 54.0
margin_top = 68.0
margin_right = 694.0
margin_bottom = 548.0
rect_min_size = Vector2( 640, 480 )
window_title = "String extractor"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="VB"]
margin_right = 624.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VB/HB"]
margin_top = 5.0
margin_right = 29.0
margin_bottom = 19.0
text = "Root"

[node name="RootPathEdit" type="LineEdit" parent="VB/HB"]
margin_left = 33.0
margin_right = 624.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://"

[node name="HB2" type="HBoxContainer" parent="VB"]
margin_top = 28.0
margin_right = 624.0
margin_bottom = 52.0

[node name="ExcludedDirsLabel" type="Label" parent="VB/HB2"]
margin_top = 5.0
margin_right = 122.0
margin_bottom = 19.0
text = "Ignored directories"

[node name="ExcludedDirsEdit" type="LineEdit" parent="VB/HB2"]
margin_left = 126.0
margin_right = 624.0
margin_bottom = 24.0
hint_tooltip = "Directories seperated by semicolons `;`"
size_flags_horizontal = 3
text = "addons"

[node name="HB3" type="HBoxContainer" parent="VB"]
margin_top = 56.0
margin_right = 624.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="VB/HB3"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "Prefix"

[node name="PrefixLineEdit" type="LineEdit" parent="VB/HB3"]
margin_left = 40.0
margin_right = 624.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="StatusBar" type="Control" parent="VB"]
margin_top = 84.0
margin_right = 624.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 24 )

[node name="SummaryLabel" type="Label" parent="VB/StatusBar"]
margin_top = 4.0
margin_right = 624.0
margin_bottom = 18.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="VB/StatusBar"]
visible = false
margin_right = 624.0
margin_bottom = 16.0
step = 1.0

[node name="Results" type="Tree" parent="VB"]
margin_top = 112.0
margin_right = 624.0
margin_bottom = 416.0
size_flags_vertical = 3
hide_root = true
select_mode = 1

[node name="Spacer" type="Control" parent="VB"]
margin_top = 420.0
margin_right = 624.0
margin_bottom = 428.0
rect_min_size = Vector2( 0, 8 )

[node name="Buttons" type="HBoxContainer" parent="VB"]
margin_top = 432.0
margin_right = 624.0
margin_bottom = 452.0
custom_constants/separation = 16
alignment = 1

[node name="ExtractButton" type="Button" parent="VB/Buttons"]
margin_left = 184.0
margin_right = 239.0
margin_bottom = 20.0
text = "Extract"

[node name="ImportButton" type="Button" parent="VB/Buttons"]
margin_left = 255.0
margin_right = 370.0
margin_bottom = 20.0
disabled = true
text = "Import selected"

[node name="CancelButton" type="Button" parent="VB/Buttons"]
margin_left = 386.0
margin_right = 440.0
margin_bottom = 20.0
text = "Cancel"

[node name="Spacer2" type="Control" parent="VB"]
margin_top = 456.0
margin_right = 624.0
margin_bottom = 464.0
rect_min_size = Vector2( 0, 8 )
[connection signal="pressed" from="VB/Buttons/ExtractButton" to="." method="_on_ExtractButton_pressed"]
[connection signal="pressed" from="VB/Buttons/ImportButton" to="." method="_on_ImportButton_pressed"]
[connection signal="pressed" from="VB/Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
